<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_version_value">1.3</string>
    <string name="app_name">Irish Examiner</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="last_updated">Last updated</string>
    <string name="no_internet">Unable to retrieve content at this time. Network unavailable.</string>
    <string name="image">Image</string>
    <string name="coments">Comments</string>
    <string name="gallery">Gallery</string>
    <string name="retweets">RETWEETS</string>
    <string name="favourites">FAVOURITES</string>

    <string-array name="font_sizes">
        <item>15</item>
        <item>19</item>
        <item>23</item>
    </string-array>
    <string-array name="font_size_labels">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="orientations">
        <item>4</item>
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="orientation_labels">
        <item>Disable</item>
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>

    <string name="text_size">Text size</string>
    <string name="choose_photo">Choose photo</string>
    <string name="back">Back</string>
    <string name="image_cache_size">Image cache size:</string>
    <string name="clear_cache">Clear cache</string>
    <string name="previous">PREVIOUS</string>
    <string name="next">NEXT</string>
    <string name="of">OF</string>
    <string name="menu">Menu</string>
    <string name="latest">Latest</string>
    <string name="image_positioning">Image positioning in story lists</string>
    <string name="images_on_the_right">Images will appear on the right</string>
    <string name="images_on_the_left">Images will appear on the left</string>
    <string name="app_version">App Version</string>
    <string name="lock_rotation">Lock rotation</string>
    <string name="lock_orientation">Lock orientation</string>
    <string name="remove_orientation_lock">Remove orientation lock</string>
    <string name="go_to_desktop">Visit our website for more</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="never_updated">Never updated</string>
    <string name="show_sumamry">Show summary</string>
    <string name="showing_summary">Showing summary</string>
    <string name="not_showing_summary">Not showing summary</string>
    <string name="wants_to_access_location">Irish Examiner wants to access your location in order to provide you with the latest local news alerts</string>
    <string name="send_photo">Irish Examiner Android: Send Photo</string>
    <string name="send_video">Irish Examiner Android: Attach Video</string>
</resources>